Correct color for hero title, spacing in hero-text

--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ button {
   gap: 8px;
 }
 
-.info-cards > * > img {
+.info-cards > .card > img {
   width: 150px;
   border: 4px solid #3882F6;
   border-radius: 16px;
@@ -134,6 +134,7 @@ button {
   justify-content: space-between;
   padding: 24px 48px;
   margin: 48px 12%;
+  gap: 24px;
 }
 
 .sign-up-card > button {
